--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,7 @@ dependencies = [
     "plotly>=6.2.0",
     "seaborn>=0.13.0",
     "matplotlib>=3.10.0",
+    "scipy>=1.15.0",
+    "numpy>=1.26.0",
+    "openpyxl>=3.1.0",
 ]
