Remove legacy files and implement new server structure for Excel analysis
- Deleted `app.py` and `chainlit.md` as part of the transition to a new server-based architecture.
- Introduced `server.py` to handle Excel file uploads and analysis via a Sanic API.
- Added `core/analysis.py` for data processing and HTML report generation from Excel files.
- Created `core/xingyun_service.py` to manage interactions with the Xingyun API for data analysis.
- Updated `requirements.txt` to include necessary dependencies for the new implementation.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,18 @@
                 "-w"
             ],
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Chainlit Run Demo",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "chainlit",
+            "args": [
+                "run",
+                "${workspaceFolder}/demo.py",
+                "-w"
+            ],
+            "console": "integratedTerminal"
         }
     ]
 }
