--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ sanic>=23.0.0
 pandas>=1.5.0
 openpyxl>=3.0.0
 chainlit>=0.7.0
-openai>=1.0.0 
+openai>=1.0.0
+gunicorn>=21.0.0
+python-dotenv>=1.0.0
+uvicorn>=0.20.0 
