Refactor app configuration and remove legacy files
- Renamed the Sanic app from "data-analysis-api" to "app" for consistency.
- Deleted `report_local.html`, `startup.sh`, and `startup.txt` as part of the cleanup process.
- Updated `requirements.txt` to include new dependencies for improved functionality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ chainlit>=0.7.0
 openai>=1.0.0
 gunicorn>=21.0.0
 python-dotenv>=1.0.0
-uvicorn>=0.20.0 
+uvicorn>=0.20.0
+requests>=2.25.0
+aiofiles>=0.8.0 
