--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-sanic>=23.0.0
+sanic==23.12.1
 pandas>=1.5.0
 openpyxl>=3.0.0
 chainlit>=0.7.0
 openai>=1.0.0
-gunicorn>=21.0.0
+gunicorn==21.2.0
 python-dotenv>=1.0.0
 uvicorn>=0.20.0
 requests>=2.25.0
