--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-sanic==23.12.1
-pandas>=1.5.0
-openpyxl>=3.0.0
-chainlit>=0.7.0
-openai>=1.0.0
-gunicorn==21.2.0
-python-dotenv>=1.0.0
-uvicorn>=0.20.0
-requests>=2.25.0
-aiofiles>=0.8.0
-waitress>=2.1.0 
+sanic
+sanic-cors
+sanic-ext
+openai
+numpy
+pandas
+openpyxl
+python-dotenv
+requests
+aiofiles
