Refactor server structure and update Docker configuration
- Moved server startup logic from `app.py` to a new `server.py` file for better organization.
- Updated `Dockerfile` to simplify dependency installation and changed the exposed port to 8000.
- Revised VSCode launch configuration to reflect the new server entry point.
- Cleaned up commented-out code in `app.py` to enhance readability.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug App.py",
+            "name": "Debug Server.py",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/app.py",
+            "program": "${workspaceFolder}/server.py",
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "env": {
